--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Tessa's Site</title>
+	<title>Tessa's Girl Develop It Minneapolis Site</title>
 	<link rel="stylesheet" type="text/css" href="css/reset.css">
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 	<link rel="stylesheet" type="text/css" href="css/responsive.css">
@@ -13,7 +13,7 @@
 	<header>
 		<div class="container">
 			<div class="logo">
-				<h1><a href="index.html">Tessa's Site</a></h1>
+				<h1><a href="index.html">Tessa's GDI Site</a></h1>
 			</div>
 			<div class="nav-toggle">
 				<i class="fa fa-bars"></i>
