--- a/index.html
+++ b/index.html
@@ -2,18 +2,20 @@
 <html>
 <head>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Tessa's Girl Develop It Minneapolis Site</title>
+	<title>Golden Retrievers Are Adorable </title>
 	<link rel="stylesheet" type="text/css" href="css/reset.css">
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 	<link rel="stylesheet" type="text/css" href="css/responsive.css">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
+	<link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
 </head>
 <body>
 
 	<header>
 		<div class="container">
 			<div class="logo">
-				<h1><a href="index.html">Tessa's GDI Site</a></h1>
+				<h1><a href="index.html">Golden Retrievers <i class="fa fa-heart" aria-hidden="true"></i>
+</a></h1>
 			</div>
 			<div class="nav-toggle">
 				<i class="fa fa-bars"></i>
